--- a/index.html
+++ b/index.html
@@ -1,16 +1,27 @@
-<h1>Hello World</h1>
+<!Doctype hmtl>
+<html>
 
-<h2>Hello Again</h2>
-<h3>Hello Again</h3>
-<h4>Hello Again</h4>
-<h5>Hello Again</h5>
-<h6>Hello Again</h6>
+<head>
+	<title>Your First Page</title>
+</head>
 
-<p>Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.  Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.  Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.</p>
+<body>
+	<h1>Hello World</h1>
 
-<a href="#">Go to Home</a> 
-<br />
-<a href="https://www.google.com/">Go to Google</a>
+	<h2>Hello Again</h2>
+	<h3>Hello Again</h3>
+	<h4>Hello Again</h4>
+	<h5>Hello Again</h5>
+	<h6>Hello Again</h6>
 
-<hr />
-<img src="http://www.lfpl.org/images/header-image1.jpg" />
+	<p>Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.  Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.  Lorem ipsum dolor sit amet, risus nonummy mattis in sunt turpis sociis, nibh vel eu hymenaeos tincidunt temporibus per, wisi pellentesque quisque porttitor ornare, consequat feugiat aenean nunc id, massa mauris nibh excepteur.</p>
+
+	<a href="#">Go to Home</a> 
+	<br />
+	<a href="https://www.google.com/">Go to Google</a>
+
+	<hr />
+	<img src="http://www.lfpl.org/images/header-image1.jpg" />
+</body>
+</html>
+
